# transactions-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  gunicorn.conf.py  local.env  manage.py  pyproject.toml  requirements.txt  script_load_test_data.py
.circleci/: config.yml
src/: __init__.py  managers.py  mixins.py  models.py  serializers.py  urls.py  views.py
src/fixtures/: transactions.json
src/migrations/: 0001_initial.py  0002_add_transaction_deleted_at_field.py
templates/: content.html  footer.html  header.html  index.html
tests/: conftest.py  factories.py  test_models.py  test_serializers.py  test_views.py
transactions-api/src/: models.py  serializers.py  views.py
transactions-api/src/fixtures/: categories.json  customers.json
transactions-api/src/migrations/: 0001_initial.py
transactions-api/tests/: __init__.py  conftest.py  factories.py  test_example.py  test_models.py  test_serializers.py  test_views.py
transactions-api/transactions_api/: asgi.py  settings.py  urls.py  wsgi.py
transactions_api/: settings.py  urls.py
